# dxvk

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/d3d10/: d3d10_core.cpp  d3d10_main.cpp  d3d10_reflection.cpp  d3d10_reflection.h
src/d3d11/: d3d11_blend.cpp  d3d11_context.cpp  d3d11_device.cpp  d3d11_input_layout.cpp  d3d11_main.cpp  d3d11_options.cpp  d3d11_sampler.cpp  d3d11_shader.cpp  d3d11_state.cpp  d3d11_state.h  d3d11_swapchain.cpp  d3d11_texture.cpp  d3d11_video.h
src/d3d9/: d3d9_adapter.cpp  d3d9_common_texture.cpp  d3d9_device.cpp  d3d9_fixed_function.cpp  d3d9_interface.cpp  d3d9_main.cpp  d3d9_shader.cpp  d3d9_swapchain.cpp  d3d9_swvp_emu.cpp  d3d9_util.cpp  d3d9_util.h
src/dxbc/: dxbc_chunk_isgn.cpp  dxbc_compiler.cpp
src/dxgi/: dxgi_adapter.cpp  dxgi_factory.cpp  dxgi_main.cpp  dxgi_swapchain.cpp
src/dxso/: dxso_compiler.cpp  dxso_decoder.cpp  dxso_reader.cpp  dxso_reader.h
src/dxvk/: dxvk_bind_mask.h  dxvk_buffer.h  dxvk_cmdlist.cpp  dxvk_constant_state.h  dxvk_context.cpp  dxvk_cs.cpp  dxvk_device_filter.cpp  dxvk_framebuffer.cpp  dxvk_framebuffer.h  dxvk_instance.cpp  dxvk_openvr.cpp  dxvk_openxr.cpp  dxvk_pipemanager.cpp  dxvk_queue.cpp  dxvk_renderpass.cpp  dxvk_renderpass.h  dxvk_shader.cpp  dxvk_state_cache.cpp  dxvk_state_cache.h  dxvk_thread_pool.cpp  dxvk_thread_pool.h  dxvk_util.cpp  dxvk_util.h  meson.build
src/dxvk/hud/: dxvk_hud_item.cpp
src/spirv/: spirv_code_buffer.cpp  spirv_code_buffer.h  spirv_compression.cpp  spirv_instruction.h  spirv_module.cpp  spirv_module.h
src/util/: thread.h  util_bit.h  util_env.cpp  util_env.h  util_gdi.cpp  util_matrix.cpp  util_monitor.cpp  util_string.cpp  util_string.h
src/util/config/: config.cpp
src/util/log/: log.cpp  log.h  log_debug.h
src/util/sha1/: sha1_util.h
src/util/sync/: sync_signal.h  sync_signal_win32.h  sync_spinlock.h
src/vulkan/: vulkan_presenter.cpp  vulkan_util.h
tests/: CMakeLists.txt
tests/d3d9/: test_d3d9_nv12.cpp  test_d3d9_triangle.cpp
tests/dxbc/: test_dxbc_compiler.cpp  test_hlsl_compiler.cpp
tests/dxgi/: test_dxgi_factory.cpp
